# Nady_Django

./: .gitignore  Commands.txt  client_secret.json  environment-config.json  gulpfile.js  old_package.json  package.json  poetry_mac_requirements.txt  poetry_requirements.txt  pyproject.toml  readme.md  requirements.txt  scripts.py
Account/: forms.py  urls.py  views.py
Analysis/: models.py
Analytic/: apps.py
Article/: dataloaders.py  filters.py  models.py  queries.py  types.py
Config/: settings.py  urls.py
Digit/: forms.py  models.py  urls.py  views.py
Doctor/: models.py
Drug/: apps.py  models.py
Employee/: models.py
Entities/: .$Nady System.drawio.bkp  Nady System.drawio  myLab.drawio
Entity/: models.py
Facility/: models.py
GraphQL/: admin.py  custom_fields.py  models.py  schema.py  urls.py  views.py
Helpers/: client_secret_461124974835-3a38d911etrm2psv5ks9ib67e7scuoqb.apps.googleusercontent.com.json
Invoice/: models.py
Kat/: apps.py  models.py
Laboratory/: barCode.py  models.py  urls.py  views.py
Language/: models.py
Location/: forms.py  models.py
Model/: CNN_model.h5  Django_React.ipynb  main.py
PagesVelzon/: apps.py  urls.py  views.py
Parameters/: apps.py  models.py
Payment/: models.py  rate_exchange.py  urls.py  views.py
Person/: models.py
Prescription/: models.py
Product/: admin.py  forms.py  models.py
Specimen/: apps.py  models.py
Tool/: admin.py  models.py
Unit/: models.py
User/: admin.py  forms.py  models.py  mutations.py  permissions.py  queries.py  types.py  views.py
Utils/: admin.py
src/js/: app.js  (+1 more)
(+269 files in other folders)
